# qt_client

./: CMakeLists.txt  chat.cpp  chat.h  chat.ui  chose_server.cpp  chose_server.h  chose_server.ui  enter_password.cpp  enter_password.h  enter_password.ui  ep.cpp  ep.h  ep.ui  main.cpp  mainwindow.cpp  mainwindow.h  server_settings.cpp  server_settings.h  server_settings.ui  user.cpp  user.h  user.ui  username.cpp  username.h  username.ui
